force-app/main/default/objects/Enhanced_Pricing__c/Enhanced_Pricing__c.object-meta.xml
<CustomObject>
    <label>Enhanced Pricing</label>
    <nameField>
        <label>Enhanced Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enhanced Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>