force-app/main/default/objects/Enhanced_Pricing__c/fields/AE_SB__c.field-meta.xml
<CustomField>
    <fullName>AE_SB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE/SB</label>
    <referenceTo>AE_SB__c</referenceTo>
    <relationshipLabel>Enhanced Pricings</relationshipLabel>
    <relationshipName>Enhanced_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>