force-app/main/default/objects/Enhanced_Pricing__c/fields/Price_Solo__c.field-meta.xml
<CustomField>
    <fullName>Price_Solo__c</fullName>
    <label>Price(Solo)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>