force-app/main/default/objects/Enhanced_Pricing__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AE/SB</fullName>
            </value>
            <value>
                <fullName>Stopover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>