force-app/main/default/objects/Enhanced_Pricing__c/fields/Sub_Stopover__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stopover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Stopover</label>
    <referenceTo>sub_stopover__c</referenceTo>
    <relationshipLabel>Enhanced Pricings</relationshipLabel>
    <relationshipName>Enhanced_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>