force-app/main/default/objects/Enhanced_Pricing__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF(NOT(ISBLANK( AE_SB__c )), TEXT(AE_SB__r.Type__c ), TEXT(Sub_Stopover__r.type__c ))</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>