force-app/main/default/objects/Enhanced_Pricing__c/validationRules/Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Date_From__c  &gt;  Date_To__c</errorConditionFormula>
    <errorDisplayField>Date_From__c</errorDisplayField>
    <errorMessage>Date from cannot be after Date To</errorMessage>
</ValidationRule>