force-app/main/default/objects/Enhanced_Pricing__c/validationRules/Record_type_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_type_check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(
ISPICKVAL(Record_Type__c, &quot;AE/SB&quot;), 
ISPICKVAL(Record_Type__c, &quot;Stopover&quot;)
),
OR(
AND(ISPICKVAL(Record_Type__c, &quot;AE/SB&quot;),OR(ISBLANK(AE_SB__c),
NOT(ISBLANK(Sub_Stopover__c)))),
AND(ISPICKVAL(Record_Type__c, &quot;Stopover&quot;),
OR(ISBLANK(Sub_Stopover__c),
NOT(ISBLANK(AE_SB__c))
   )
  )
 )
)</errorConditionFormula>
    <errorMessage>record type error</errorMessage>
</ValidationRule>